:bug: Fix alignment of cards in index, upcoming and past events pages

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,9 @@ h1 {
 .container-details{
   height: 70vh;
 }
+.card{
+  width: 18rem;
+}
 .shadow-card{
   box-shadow: 2px 2px 10px gray;
 }
@@ -97,6 +100,9 @@ table{
     .container-icons{
       width: 100%;
       justify-content: center;
+    }
+    .card{
+      width: 16rem;
     }
    }
       
